kubectl/06-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rrd-monitor
