kubectl/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rrd-ingress
  namespace: rrd-monitor
  annotations:
    kubernetes.io/ingress.class: traefik
    # No necesitamos rewrite-target ni strip-prefix
    # porque la estructura física coincide con la URL.
spec:
  rules:
  - http:
      paths:
      - path: /rrd
        pathType: Prefix
        backend:
          service:
            name: rrd-web-service # Apuntamos al ClusterIP
            port:
              number: 80
